<resources>
    <string name="app_name">Kogo Junior</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="add_the_user_information">Add the User Information</string>
    <string name="menu_gallery">School Profile</string>
    <string name="menu_slideshow">School Details</string>
    <string name="school_name">Kogo Junior School</string>
    <string name="school_motto">Hardwork Begat Success</string>
    <string name="school_email">email: kogojunior@gmail.com</string>
    <string name="school_phone">tel: +25472071089</string>
    <string name="email_address">Email Address</string>
    <string name="send_your_message">Send your Message</string>
    <string name="ask_your_query">Ask Your Query</string>
    <string name="info_school">kogojunior@gmail.com</string>
    <string name="number">+254720871089</string>
    <string name="phone_no">Phone Number</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="mobile_no">Mobile No</string>
    <string name="birthdata">Id Number</string>
    <string name="more_information">Position</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
</resources>