<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUsActivity">
    <LinearLayout
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backtohome"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:padding="5dp"
                android:src="@drawable/ic_arrow" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:padding="1dp"
                android:src="@drawable/ic_notification" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/bg_img"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/contact" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        android:layout_below="@+id/bg_img"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:cardCornerRadius="12dp"
        android:elevation="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/contact"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:text="@string/contact_us"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/line_view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/contact"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:background="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line_view"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/imgg"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_phone" />

                <LinearLayout
                    android:id="@+id/lin_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgg"
                    android:layout_toRightOf="@id/imgg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/phone_no"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/number"
                        android:textColor="#0277BD"
                        android:textColorHighlight="@android:color/holo_red_dark"
                        android:textSize="18sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/img_mob"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/lin_1"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_email" />

                <LinearLayout
                    android:id="@+id/lin_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lin_1"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/img_mob"
                    android:layout_toRightOf="@id/img_mob"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/email_address"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/info_school"
                        android:textColor="#0277BD"
                        android:textColorHighlight="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/mail_img"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/lin_2"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/question" />

                <LinearLayout
                    android:id="@+id/lin_3"
                    android:layout_width="316dp"
                    android:layout_height="73dp"
                    android:layout_below="@id/lin_2"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/mail_img"
                    android:layout_toRightOf="@id/mail_img"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/ask_your_query"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/send_your_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/send_your_message"
                        android:textColor="#0277BD"
                        android:textColorHighlight="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/imgProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="250dp"
                        android:layout_marginBottom="34dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/facebook"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/faba" />

                        <ImageView
                            android:id="@+id/instagram"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="55dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/instargram" />

                        <ImageView
                            android:id="@+id/youtube"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="110dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/youtube" />

                        <ImageView
                            android:id="@+id/share"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="165dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/share" />

                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
