<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backtohome"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:padding="5dp"
                    android:src="@drawable/ic_arrow" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="41dp"
                    android:layout_marginBottom="5dp"
                    android:padding="1dp"
                    android:src="@drawable/ic_phone" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="1dp"
                    android:src="@drawable/ic_notification" />

            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Kogo Junior"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="Profile"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="33sp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <include
        android:layout_gravity="center"
        layout="@layout/item_image"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/item_add"/>
            <include layout="@layout/item_info"/>
            <include layout="@layout/item_email"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/bg_img"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="TODO"
            android:scaleType="centerCrop"
            android:src="@drawable/contact" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:layout_below="@+id/bg_img"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:cardCornerRadius="12dp"
            android:elevation="12dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="174dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginLeft="22dp"
                    android:text="@string/contact_us"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/line_view"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_below="@id/contact"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginRight="36dp"
                    android:background="@color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginStart="22dp"
                    android:layout_below="@id/line_view"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:id="@+id/imgg"
                        android:layout_width="30dp"
                        android:layout_height="60dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/ic_phone"
                        android:contentDescription="TODO" />

                    <LinearLayout
                        android:id="@+id/lin_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imgg"
                        android:layout_toRightOf="@id/imgg"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="0dp"
                            android:text="@string/phone_no"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/call"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/number"
                            android:textColor="#0277BD"
                            android:textColorHighlight="@android:color/holo_red_dark"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/img_mob"
                        android:layout_width="30dp"
                        android:layout_height="60dp"
                        android:layout_below="@id/lin_1"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_email"
                        android:contentDescription="TODO" />
                    <LinearLayout
                        android:id="@+id/lin_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_below="@id/lin_1"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@id/img_mob"
                        android:layout_toEndOf="@id/img_mob">

                        <TextView
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginLeft="12dp"
                            android:textSize="16sp"
                            android:layout_marginTop="0dp"
                            android:textColor="@android:color/black"
                            android:text="@string/email_address" />

                        <TextView
                            android:id="@+id/feedback"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/info_school"
                            android:textColor="#0277BD"
                            android:textColorHighlight="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/mail_img"
                        android:layout_width="30dp"
                        android:layout_height="60dp"
                        android:layout_below="@id/lin_2"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/question"

                        android:contentDescription="TODO" />

                    <LinearLayout
                        android:id="@+id/lin_3"
                        android:layout_width="316dp"
                        android:layout_height="73dp"
                        android:layout_below="@id/lin_2"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="15dp"
                        android:layout_toEndOf="@id/mail_img"
                        android:layout_toRightOf="@id/mail_img"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="0dp"
                            android:text="@string/ask_your_query"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/send_your_message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/send_your_message"
                            android:textColor="#0277BD"
                            android:textColorHighlight="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="298dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/imgProfile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="250dp"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/facebook"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerVertical="true"
                                android:src="@drawable/faba" />

                            <ImageView
                                android:id="@+id/instagram"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="55dp"
                                android:contentDescription="TODO"
                                android:src="@drawable/instargram" />

                            <ImageView
                                android:id="@+id/youtube"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="110dp"
                                android:contentDescription="TODO"
                                android:src="@drawable/youtube" />

                            <ImageView
                                android:id="@+id/share"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="165dp"
                                android:contentDescription="TODO"
                                android:src="@drawable/share" />

                        </RelativeLayout>
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>



</LinearLayout>